# zones_client

./: .env  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  element_zones_au_dev.els  installer.iss  vcpkg.json  zones.pkgproj  zones_arm64.pkgproj  zones_rotary_design.afdesign  zones_x64.pkgproj
client/: CMakeLists.txt
client/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorContainer.cpp  ProcessorContainer.h  ProjectImportComponent.cpp  ProjectImportComponent.h  SidebarContent.cpp  SidebarContent.h  Translations.cpp  Translations.h  WithJuceEventLoop.h
client/src/components/: SidebarContent.cpp  SidebarContent.h  SidebarFooter.cpp  SidebarFooter.h  SidebarHeader.cpp  SidebarHeader.h
client/src/components/metering/: ChannelBar.cpp  ChannelBar.h  ClippingIndicator.cpp  ClippingIndicator.h  ClippingIndicatorsComponent.cpp  ClippingIndicatorsComponent.h  DiscreteLevelLabels.cpp  DiscreteLevelLabels.h  LabelContainer.cpp  LabelContainer.h  LabelHeightContainer.cpp  LabelHeightContainer.h  MeterComponent.cpp  MeterComponent.h
client/src/controllers/: LoadController.cpp  LoadController.h  UserZonesController.cpp  UserZonesController.h  WebLoadController.cpp  WebLoadController.h  WebZonesController.cpp  WebZonesController.h  WebZonesHelper.cpp  WebZonesHelper.h
client/src/controllers/visualiser/: Spectrogram.cpp  Spectrogram.h  VisualiserController.cpp  VisualiserController.h
client/src/relays/: EngineRelay.cpp  EngineRelay.h  LoadRelay.cpp  LoadRelay.h  MeteringRelay.cpp  MeteringRelay.h  ParameterRelay.cpp  ParameterRelay.h  PlayerRelay.cpp  PlayerRelay.h  PreferencesRelay.cpp  PreferencesRelay.h  ResizeRelay.cpp  ResizeRelay.h  UserZonesRelay.cpp  UserZonesRelay.h  VisualiserRelay.cpp  VisualiserRelay.h  WebZonesRelay.cpp  WebZonesRelay.h
client/translations/: en.translate
client/ui/: .env.flatc  .eslintrc.cjs  .gitignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/ui/.storybook/: main.ts  preview-head.html  preview.tsx
client/ui/src/: browser.tsx  create_zone.tsx  editor.tsx  error_page.tsx  main.tsx  preferences.tsx  root.tsx
client/ui/src/components/: banner_image_gallery.tsx  discrete_level_layout.stories.tsx  discrete_level_layout.tsx  knob.tsx  knob_base.tsx  knob_baseKnobBase.cy.tsx  knob_base_thumb.tsx  knob_percentage.tsx  meter.stories.tsx  meter.tsx  resize_handle.tsx  user_profile.tsx  zones_hits.tsx  zones_search_box.tsx
client/ui/src/context/: LoadContext.tsx  browser_context.tsx  load_context.tsx  search_context.tsx  tabs_context.tsx  visualiser_context.tsx
client/ui/src/hooks/: use_cached_web_zones.ts  use_control_parameter_index_updater.ts  use_engine.ts  use_metering.ts  use_online.ts  use_player.ts  use_preferences.ts  use_slider.ts  use_user_zones.ts  use_valid_target_formats.ts  use_zone.ts  zone_metadata.ts
client/ui/src/ipc/: cached_web_zones_ipc.ts  create_zone_ipc.ts  engine_ipc.ts  load_ipc.ts  metering_ipc.ts  player_ipc.ts  preferences_ipc.ts  resize_ipc.ts  user_zones_ipc.ts  valid_target_formats_ipc.ts  visualiser_ipc.ts
client/ui/src/lib/: abortable.ts  api.ts  config.ts  formats.ts  irs.ts  juce.js  meter_renderer.ts  parameters.ts  s3_resources.ts  user_zones.ts  zone_options.ts  zones.ts
lib/: CMakeLists.txt
modules/: CMakeLists.txt
modules/account/: CMakeLists.txt
modules/account/test/: AccountActionTests.cpp  AccountControllerTests.cpp  AccountUtilsTests.cpp
modules/api/: CMakeLists.txt
modules/api/test/: TestApiRequest.cpp  TestDeviceApi.cpp  TestOidcApi.cpp
modules/audio_engine/: CMakeLists.txt
modules/audio_engine/test/: CommandQueueTests.cpp  ComplexBufferTests.cpp  ConvolverUtilitiesTests.cpp  TimeDomainConvolverTests.cpp  VisitorQueueTests.cpp
modules/browser/: CMakeLists.txt
modules/editor/: CMakeLists.txt
modules/format/: CMakeLists.txt
modules/format/test/: IrMetadataTests.cpp  ZoneMetadataTests.cpp
modules/format/test_data/: valid_zone_metadata.json  zone_with_file.json
modules/impulse_response_repository/: CMakeLists.txt
modules/ir_engine/: CMakeLists.txt
modules/ir_engine/test/: IrEngineTests.cpp  IrGraphCachePolicyTests.cpp  IrGraphHashingTests.cpp  IrGraphStateKeyTests.cpp  IrGraphTests.cpp  MockProcessor.h  ProcessResultPoolTests.cpp  TestWeirdCache.cpp
modules/ir_format/: CMakeLists.txt
modules/ir_format/test/: IrMetadataTests.cpp
modules/ir_format/test_data/: valid_ir.json
modules/ir_repository/: CMakeLists.txt
modules/ir_repository/test/: IrMetdataTests.cpp  TestTestModuleClass.cpp
modules/layout/: CMakeLists.txt
modules/layout/test/: TabsActionTests.cpp
modules/look_and_feel/: CMakeLists.txt
modules/look_and_feel/assets/: zones_light.afdesign
modules/look_and_feel/storyboard/: Main.cpp  StoryboardComponent.cpp  StoryboardComponent.h  Visualisers.h
modules/model/: CMakeLists.txt
modules/preferences/: CMakeLists.txt
modules/sidebar/: CMakeLists.txt
modules/spectrogram_visualiser/: CMakeLists.txt
modules/spectrogram_visualiser/shaders/: circle.frag.glsl  circular_gradient.frag.glsl  graph.frag.glsl  graph.vert.glsl  graph3d.frag.glsl  graph3d.vert.glsl  osc_2d.frag.glsl  osc_3d.frag.glsl  osc_3d.vert.glsl  simple_gradient.frag.glsl  solid_colour.frag.glsl  test.frag.glsl  test.vert.glsl
modules/visualiser/: CMakeLists.txt
modules/visualiser/shaders/: graph.vert.glsl  graph3d.frag.glsl  graph3d.vert.glsl  grid3d.frag.glsl
modules/zone_format/: CMakeLists.txt
modules/zone_format/test/: ZoneMetadataTests.cpp
modules/zone_repository/: CMakeLists.txt
modules/zone_repository/test_data/: valid_ir.json
modules/zones_api/: CMakeLists.txt
modules/zones_api/test/: TestApiRequest.cpp
modules/zones_look_and_feel/: CMakeLists.txt
modules/zones_look_and_feel/scripts/: boxicons_content.json  parse_boxicons_content.js
modules/zones_look_and_feel/storyboard/: Buttons.cpp  Buttons.h  Combos.cpp  Combos.h  StoryboardComponent.cpp  StoryboardComponent.h  Visualisers.cpp  Visualisers.h
modules/zones_test_module/: CMakeLists.txt
(+441 files in other folders)
