add_subdirectory(look_and_feel)
add_subdirectory(api)
add_subdirectory(visualiser)
add_subdirectory(ir_repository)
add_subdirectory(ir_engine)
add_subdirectory(ir_format)
add_subdirectory(audio_engine)
add_subdirectory(model)
add_subdirectory(layout)
add_subdirectory(browser)
add_subdirectory(editor)
add_subdirectory(preferences)
add_subdirectory(zone_format)